<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:iconTint="@color/white"
        android:enabled="true"/>
    <item
        android:id="@+id/saveDrugs"
        android:title="@string/save_drug"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:iconTint="@color/white"
        android:enabled="true"/>

    <item
        android:id="@+id/history"
        android:title="@string/history"
        android:icon="@drawable/ic_baseline_history_24"
        android:iconTint="@color/white"
        android:enabled="true"/>
</menu>