<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke"
    tools:context=".CommonFiles.LoginSignup.SignScreen">


  <ScrollView
      android:layout_height="match_parent"
      android:layout_width="match_parent"
      android:transitionName="signup_screen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:layout_marginLeft="230dp"
            app:srcCompat="@drawable/part1"
            app:tint="@color/black" />



      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Sign up"
            android:layout_marginBottom="10dp"
            android:textColor="@color/GoldenRod"
            android:textSize="40dp"
            android:textStyle="bold"
            android:textAllCaps="true"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Full Name"
            android:textColorHint="@color/Gray"
            app:boxStrokeColor="@color/GoldenRod"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/GoldenRod"
            app:startIconDrawable="@drawable/ic_baseline_person_outline_24"
            app:startIconTint="@color/GoldenRod"
            app:helperTextTextColor="@color/AliceBlue">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/name_editText"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:textColor="@color/black"
              android:inputType="text"
              android:textSize="20sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email Address"
            android:textColorHint="@color/Gray"
            app:boxStrokeColor="@color/GoldenRod"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/GoldenRod"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="@color/GoldenRod">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:textColor="@color/black"
              android:inputType="text"
              android:textSize="20sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/WhiteSmoke"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_age"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="4dp"
            android:text="@string/eligible_age_to_register_is_16yrs"
            android:textColor="@color/DarkGreen"
            android:textSize="14sp"/>

        <DatePicker
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarTextColor="@color/white"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:spinnersShown="true"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_back_state"
            android:text="Next"
            android:layout_gravity="center"
            android:textColor="@color/WhiteSmoke"
            android:textSize="22sp"
            android:onClick="next_btn"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="#00000000"
            android:text="login now"
            android:layout_gravity="center"
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp"
            android:onClick="login"/>

      </LinearLayout>

    </LinearLayout>
  </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>