<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/drawLayout"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/WhiteSmoke"
tools:context=".RegisteredUser.RegisteredUserHomePage">

<View
    android:id="@+id/blurView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:alpha="0"
    android:visibility="gone"/>

<com.google.android.material.navigation.NavigationView
    android:id="@+id/nav_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:headerLayout="@layout/drawable_layout"
    app:menu="@menu/registered_user_menu_resource"
    android:theme="@style/nav_theme"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/menulayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/Primary_color">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="45dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_baseline_menu_24" />

        <TextView
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/menu"
            android:text="MediSpot"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginVertical="10dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/menulayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:hint="Search |"
            android:textColorHint="#AF9F78"
            app:endIconMode="clear_text"
            app:endIconTint="@color/GoldenRod">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#E1DED7"
                android:background="@drawable/search_box_outline"
                android:inputType="text"
                android:textSize="18sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginVertical="8dp"
            android:background="@drawable/search_icon"
            android:onClick="search"
            android:scaleType="centerCrop" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/database"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:visibility="visible"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintTop_toBottomOf="@+id/database">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/frame"
            android:backgroundTint="#7073A176"
            android:elevation="5dp"
            android:onClick="imageSearch"
            android:orientation="horizontal"
            android:paddingVertical="35dp"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/search_by_image"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@drawable/image_recognition_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/frame"
            android:backgroundTint="#7073A176"
            android:elevation="5dp"
            android:onClick="qrSearch"
            android:orientation="horizontal"
            android:paddingVertical="35dp"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/seacrh_by_qrcode"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/qrcode_scanner_icon" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/frame"
            android:backgroundTint="#7073A176"
            android:elevation="5dp"
            android:onClick="textSearch"
            android:orientation="horizontal"
            android:paddingVertical="35dp"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/search_by_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="70sp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/text_recognition_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="35dp"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/frame"
            android:backgroundTint="#7073A176"
            android:elevation="5dp"
            android:onClick="barcodeSearch"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/search_by_barcode"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/barcode_scanner_icon" />
        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="8dp"
        app:menu="@menu/bottom_navigation_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>
